--- a/site/src/styles/Contato.css
+++ b/site/src/styles/Contato.css
@@ -1,80 +1,54 @@
-.contato {
-    width: 100%;
-    height: 90vh;
-    display: flex;
-  }
-  
-  .contato .leftSide {
-    height: 100%;
-    flex: 50%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  
-  .contato .rightSide {
-    height: 100%;
-    flex: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  
-  .contato .rightSide h1 {
-    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-      "Lucida Sans", Arial, sans-serif;
-    font-weight: 10;
-    font-size: 50px;
-    margin-left: 30px;
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-    width: auto;
-    height: auto;
-    padding: 30px;
-  }
-  
-  form input {
-    height: 40px;
-    width: 80%;
-    border: none;
-    border-bottom: 1px solid #121619;
-    color: black;
-  }
-  
-  form textarea {
-    margin-top: 15px;
-    height: 70px;
-    width: 80%;
-    border: none;
-    border-bottom: 1px solid #121619;
-    color: black;
-  }
-  input::placeholder,
-  textarea::placeholder {
-    font-weight: bold;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  form input:focus,
-  textarea:focus {
-    outline: none;
-  }
-  
-  form label {
-    margin-top: 15px;
-    color: grey;
-  }
-  
-  form button {
-    margin-top: 40px;
-    width: 140px;
-    height: 40px;
-    border: none;
-    background-color: #121619;
-    color: whitesmoke;
-    font-size: 15px;
-    cursor: pointer;
-  }
+
+.container{
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #121212;
+  color: #FFF;
+  padding: 14px;
+}
+
+.title{
+  margin-bottom: 14px;
+}
+
+.form{
+  max-width: 600px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.input{
+  margin-bottom: 14px;
+  height: 34px;
+  border-radius: 4px;
+  border: 0;
+  padding: 0 8px;
+}
+
+.textarea{
+  margin-bottom: 14px;
+  border-radius: 4px;
+  border: 0;
+  padding: 8px;
+  height: 94px;
+  resize: none;
+}
+
+.button{
+  height: 34px;
+  border-radius: 4px;
+  border: 0;
+  cursor: pointer;
+  background-color: #0fdbff;
+  font-size: 18px;
+  transition: background-color, transform 0.8s;
+}
+
+.button:hover{
+  background-color: #0fe3ff;
+  transform: scale(1.01);
+}
